ci-application/smee/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: smee-service
  labels:
    app: gosmee
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
  sessionAffinity: None
  selector:
    app: gosmee
    deployment: smee-pacman
