ci-application/smee/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: smee-route
  labels:
    app: gosmee
spec:
  to:
    kind: Service
    name: smee-service
    weight: 100
  port:
    targetPort: 8080-tcp
